securityConfig, jwtAuth, /api/user ok